--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,21 +4,27 @@
 
     <%= _partial "meta" %>
 
+    <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Orbitron|Audiowide|Boogaloo|Galindo" %>
     <%= stylesheet_link_tag "site" %>
 
     <%= javascript_include_tag  "modernizr" %>
+
+    <%= stylesheet_link_tag "index" %>
 
   </head>
 
   <body class="<%= page_classes %>">
 
-    <%= _slim "header" %>
+    <%= _haml "header" %>
 
-    <%= yield %>
+    <div class="content">
+      <%= yield %>
+    </div>
 
     <%= _slim "footer" %>
 
     <%= javascript_include_tag  "site" %>
+
 
   </body>
 </html>
