--- a/source/layouts/blog-post.html.haml
+++ b/source/layouts/blog-post.html.haml
@@ -2,5 +2,6 @@
 = wrap_layout :layout do
   .blog-post-container
     .blog-post
-      h2 = current_page.title
+      %h2 
+        = current_page.title
       = yield
