--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -19,12 +19,14 @@
     border: 15px solid #3e2b14;
     border-radius: 1em;
     max-height: 100%;
+    max-width: 20em;
     width: 95%;
   }
 
   p {
-    color: $yellow;
-    font-size: 16pt;
+    margin: 1em;
+    color: $white;
+    font-size: 12pt;
     font-family: 'Galindo', cursive;
   } 
 
