two hours got nothing done

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,7 +15,9 @@
 
     <%= _haml "header" %>
 
-    <%= yield %>
+    <div class="content">
+      <%= yield %>
+    </div>
 
     <%= _slim "footer" %>
 
