--- a/source/stylesheets/_header.scss
+++ b/source/stylesheets/_header.scss
@@ -8,6 +8,7 @@ header {
   a {
     display: inline-block;
     margin-right: 0.5em;
+
   }
 
   h1 {
@@ -34,6 +35,7 @@ header {
 
   .menu-item {
     border: 1em;
+    margin: 0;
     color: $white;
   }
 
