--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -25,7 +25,7 @@
     margin: 1em;
     color: $yellow;
     font-size: 16pt;
-    font-family: 'Galindo', cursive;
+    font-family: 'Boogaloo', cursive;
   } 
   
   .buy-link {
