tweaked blog, home and index

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -4,11 +4,13 @@
   %div.inner
     %ul.menu-bar
       %li.menu-item{ role: "presentation"}
-        %a.menu-link{ href: "#novels-id"} Books
+        %a.menu-link{ href: "index.html"} Home    
+      %li.menu-item{ role: "presentation"}
+        %a.menu-link{ href: "books.html"} Books
       %li.menu-item{ role: "presentation"}
         %a.menu-link{ href: "#articles-id"} Articles
       %li.menu-item{ role: "presentation"}
-        %a.menu-link{ href: "#blog-id"} Blog
+        %a.menu-link{ href: "blog.html"} Blog
     %ul.social-media-bar
       %li.social-media-widget
         %a{ href: "https://twitter.com/mkruza" }
