--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -13,8 +13,9 @@
 @import "blog-post";
 
 .content {
+  
   img {
-    margin: 0.5em;
+    margin: 0 auto;
     border: 15px solid #3e2b14;
     border-radius: 1em;
     max-height: 100%;
@@ -22,20 +23,22 @@
   }
 
   p {
-    margin: 1em;
+    padding: 0.5em;
+    margin: 0 auto;
     color: $yellow;
     font-size: 16pt;
     font-family: 'Boogaloo', cursive;
+    max-width: 30em
   } 
   
   .buy-link {
+    margin: 0 auto;
     font-size: 14pt;
     background-color: #000000;
     width: 100%;
     text-align: center;
     clip-path: polygon(5% 50%, 10% 5%, 90% 5%, 95% 50%, 90% 95%, 10% 95%);
     font-family: 'Audiowide', cursive;
-    margin: 0 auto;
     padding-left: 10%;
     padding-right: 10%;
     -webkit-transition:color .2s ease-out, background .2s ease-in;
