tweaked social media icons and menu bar, added images, added favicon msk logo

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,6 +9,8 @@
 
     <%= javascript_include_tag  "modernizr" %>
 
+    <link rel="icon" href="images/msk_logo.jpg">
+
   </head>
 
   <body class="<%= page_classes %>">
