--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -1,23 +1,23 @@
 %header
-  %div.inner.name-big
-    %h1 Marc S. Kruza
-  %img.pic-circle{ src: "images/msk_logo.jpg" }
-  %img.pic-circle{ src: "images/me.jpg" }
   %div.inner
-    %ul.menu-bar
-      %a.menu-link{ href: "index.html"} Home    
-      %a.menu-link{ href: "books.html"} Books
+    %img.pic-circle{ src: "images/msk_logo.jpg" }
+    %h1.name-big Marc S. Kruza
+    %img.pic-circle{ src: "images/me.jpg" }
+  %div.inner
+    %div.menu-bar
+      %a.menu-link{ href: "index.html"}   Home    
+      %a.menu-link{ href: "books.html"}   Books
       %a.menu-link{ href: "#articles-id"} Articles
-      %a.menu-link{ href: "blog.html"} Blog
-    %div.social-media-bar
-      %a{ href: "https://twitter.com/mkruza" }
+      %a.menu-link{ href: "blog.html"}    Blog
+      %a.menu-link{ href: "#"}            About
+      %a.right-pull{ href: "https://twitter.com/mkruza" }
         %img.social-media-widget{ src: "images/icon_twitter.jpg" }
-      %a{ href: "https://www.facebook.com/marckruza/?skip_nax_wizard=true" }
+      %a.right-pull{ href: "https://www.facebook.com/marckruza/?skip_nax_wizard=true" }
         %img.social-media-widget{ src: "images/icon_facebook.png" }
-      %a{ href: "https://plus.google.com/b/107140843890666097689/107140843890666097689/about?gmbpt=true&pageId=107140843890666097689" }
+      %a.right-pull{ href: "https://plus.google.com/b/107140843890666097689/107140843890666097689/about?gmbpt=true&pageId=107140843890666097689" }
         %img.social-media-widget{ src: "images/icon_google_plus.jpg" }
-      %a{ href: "https://www.instagram.com/marckruza/?hl=en" }
+      %a.right-pull{ href: "https://www.instagram.com/marckruza/?hl=en" }
         %img.social-media-widget{ src: "images/icon_instagram.jpg" }
-      %a{ href: "https://www.linkedin.com/in/marc-kruza-1765128" }
+      %a.right-pull{ href: "https://www.linkedin.com/in/marc-kruza-1765128" }
         %img.social-media-widget{ src: "images/icon_linked_in.png" }
 
