--- a/source/stylesheets/_colors.scss
+++ b/source/stylesheets/_colors.scss
@@ -1,5 +1,6 @@
-$black:  #000000;
-$white:  #FFFFFF;
-$yellow: #F1DB42;
-$gray:   #222222;
-$blue:   #3299BB;
+$black:      #000000;
+$white:      #FFFFFF;
+$yellow:     #F1DB42;
+$gray:       #222222;
+$light-gray: #DDDDDD;
+$blue:       #3299BB;
