--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -1,8 +1,8 @@
 %header
-  %div.inner
-    %img.pic-circle{ src: "images/msk_logo.jpg" }
+  %div.navigation-wrapper.name-bar
+    %img{ src: "images/msk_logo.jpg" }
     %h1.name-big Marc S. Kruza
-    %img.pic-circle{ src: "images/me.jpg" }
+    %img.right-pull{ src: "images/me.jpg" }
   %div.inner
     %div.menu-bar
       %a.menu-link{ href: "index.html"}   Home    
