--- a/source/stylesheets/_header.scss
+++ b/source/stylesheets/_header.scss
@@ -11,46 +11,49 @@ header {
     margin-right: 0.5em;
   }
 
-  h1 {
-    color: $yellow;
-    font-family: "Orbitron";
-    text-align: center;
-  }
-
-  .name-big {
-    display: inline-block;
-    margin: 0 auto;
-    padding: 0;
-    color: $blue;
+  .name-bar {
+    h1 {
+      max-width: 70%;
+      display: inline-block;
+      color: $blue;
+      font-family: Orbitron;
+      padding-left: 0.5em;
+      text-align: center;
+      text-shadow: 1px 2px $gray;
+    }
+    img {
+      width: 4em;
+      border-radius: 2em;
+      margin-left:  0.25em;
+      margin-right: 0.25em;
+      height: auto;
+    }
   }
 
   .menu-bar {
     background-color: $gray;
     border-radius: 0.25em;
-    padding: 0.4em;
+    padding: 1em;
     a {
       width: auto;
       font-family: Tahoma, Geneva, sans-serif;
       font-weight: bold;
-      color: $blue;
+      color: $yellow;
       img {
+        margin-top: -1em;
         width: 1.5em;
-        border-radius: 0.6em;
+        border-radius: 0.4em;
       }
-
     }
+  }
+
+  .position-absolute {
+    position: absolute;
   }
 
   .right-pull {
     float: right;
-  }
-
-  .pic-circle {
-    width: 4em;
-    border-radius: 2em;
-    margin-left:  0.25em;
-    margin-right: 0.25em;
-    height: auto;
+    margin-top: 0.5em;
   }
 
 }
