--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -25,10 +25,11 @@
   p {
     padding: 0.5em;
     margin: 0 auto;
-    color: $yellow;
-    font-size: 16pt;
-    font-family: 'Boogaloo', cursive;
-    max-width: 30em
+    color: $black;
+    font-size: 11pt;
+    font-family: Lucida;
+    font-weight: bold;
+    max-width: 30em;
   } 
   
   .buy-link {
