made small viewport with everything centered, made larger viewport with left-justified menu, right-justified social media links and centered p text

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -1,23 +1,36 @@
 %header
-  %div.navigation-wrapper.name-bar
-    %img{ src: "images/msk_logo.jpg" }
-    %h1.name-big Marc S. Kruza
-    %img.right-pull{ src: "images/me.jpg" }
   %div.inner
+    %div.name-bar.wide-and-centered
+      %div.wide-and-centered
+        %img{ src: "images/msk_logo.jpg" }
+      %h1.name-big.wide-and-centered Marc S. Kruza
+      %div.right-pull.wide-and-centered
+        %img{ src: "images/me.jpg" }
+        %a{ href: "#{}"} &#9658 About Marc 
     %div.menu-bar
-      %a.menu-link{ href: "index.html"}   Home    
-      %a.menu-link{ href: "books.html"}   Books
-      %a.menu-link{ href: "#articles-id"} Articles
-      %a.menu-link{ href: "blog.html"}    Blog
-      %a.menu-link{ href: "#"}            About
-      %a.right-pull{ href: "https://twitter.com/mkruza" }
-        %img.social-media-widget{ src: "images/icon_twitter.jpg" }
-      %a.right-pull{ href: "https://www.facebook.com/marckruza/?skip_nax_wizard=true" }
-        %img.social-media-widget{ src: "images/icon_facebook.png" }
-      %a.right-pull{ href: "https://plus.google.com/b/107140843890666097689/107140843890666097689/about?gmbpt=true&pageId=107140843890666097689" }
-        %img.social-media-widget{ src: "images/icon_google_plus.jpg" }
-      %a.right-pull{ href: "https://www.instagram.com/marckruza/?hl=en" }
-        %img.social-media-widget{ src: "images/icon_instagram.jpg" }
-      %a.right-pull{ href: "https://www.linkedin.com/in/marc-kruza-1765128" }
-        %img.social-media-widget{ src: "images/icon_linked_in.png" }
+      %ul.wide-and-centered
+        %li
+          %a.menu-link{ href: "index.html"}   Home   
+        %li 
+          %a.menu-link{ href: "books.html"}   Books
+        %li
+          %a.menu-link{ href: "#articles-id"} Articles
+        %li
+          %a.menu-link{ href: "blog.html"}    Blog
+      %ul.right-pull.wide-and-centered
+        %li
+          %a{ href: "https://twitter.com/mkruza" }
+            %img.social-media-widget{ src: "images/icon_twitter.jpg" }
+        %li
+          %a{ href: "https://www.facebook.com/marckruza/?skip_nax_wizard=true" }
+            %img.social-media-widget{ src: "images/icon_facebook.png" }
+        %li
+          %a{ href: "https://plus.google.com/b/107140843890666097689/107140843890666097689/about?gmbpt=true&pageId=107140843890666097689" }
+            %img.social-media-widget{ src: "images/icon_google_plus.jpg" }
+        %li
+          %a{ href: "https://www.instagram.com/marckruza/?hl=en" }
+            %img.social-media-widget{ src: "images/icon_instagram.jpg" }
+        %li
+          %a{ href: "https://www.linkedin.com/in/marc-kruza-1765128" }
+            %img.social-media-widget{ src: "images/icon_linked_in.png" }
 
