--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -15,28 +15,33 @@
 .content {
   
   img {
+    display: block;
     margin: 0 auto;
     border: 15px solid #3e2b14;
     border-radius: 1em;
     max-height: 100%;
     max-width: 30em;
+    text-align: center;
   }
 
   p {
+    line-height: 1.5em;
     padding: 0.5em;
     margin: 0 auto;
     color: $black;
     font-size: 11pt;
-    font-family: Lucida;
+    font-family: Lucida ;
     font-weight: bold;
-    max-width: 30em;
+    max-width: 90%;
+    text-align: justify;
   } 
   
   .buy-link {
+    display: block;
     margin: 0 auto;
     font-size: 14pt;
     background-color: #000000;
-    width: 100%;
+    width: 20em;
     text-align: center;
     clip-path: polygon(5% 50%, 10% 5%, 90% 5%, 95% 50%, 90% 95%, 10% 95%);
     font-family: 'Audiowide', cursive;
