--- a/source/stylesheets/home.scss
+++ b/source/stylesheets/home.scss
@@ -14,7 +14,7 @@
 
 .content {
   
-  img {
+/*  img {
     margin: 0 auto;
     border: 15px solid #3e2b14;
     border-radius: 1em;
@@ -31,11 +31,13 @@
     max-width: 30em
   } 
   
+
   .buy-link {
+    display: block;
     margin: 0 auto;
     font-size: 14pt;
     background-color: #000000;
-    width: 100%;
+    width: 10em;
     text-align: center;
     clip-path: polygon(5% 50%, 10% 5%, 90% 5%, 95% 50%, 90% 95%, 10% 95%);
     font-family: 'Audiowide', cursive;
@@ -43,6 +45,6 @@
     padding-right: 10%;
     -webkit-transition:color .2s ease-out, background .2s ease-in;
       &:hover { color: yellow; }
-    }
+    }*/
 
 }
