finished draft blog travels

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -16,7 +16,7 @@
         %li
           %a.menu-link{ href: "#articles-id"} Articles
         %li
-          %a.menu-link{ href: "blog.html"}    Blog
+          %a.menu-link{ href: "/blog.html"}    Blog
       %ul.right-pull.wide-and-centered
         %li
           %a{ href: "https://twitter.com/mkruza" }
