--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -16,7 +16,7 @@
   
   img {
     display: block;
-    margin: 0 auto;
+    margin: 0.5em auto;
     border: 15px solid #3e2b14;
     border-radius: 1em;
     max-height: 100%;
@@ -60,18 +60,18 @@
       &:hover { color: yellow; }
     }
 
-    .left-pull {
-      float: left;
+    a {
+      display: block;
+      color: $white;
+      width: 100%;
+      background-color: $blue;
     }
 
-    .right-pull {
-      float: right;
-    }
 
     @media (min-width: 550px) {
       .right-pull {
         float: right;
-        margin-top: 0.5em;
+        /*margin-top: 0.5em;*/
       }
     }
     
