first publish ready to go!

--- a/source/layouts/blog-index.slim
+++ b/source/layouts/blog-index.slim
@@ -3,4 +3,4 @@
     .blog-index
       h2 Blog Posts
       - blog.articles.each do |b|
-        a href=b.url Fooooo
+        a href=b.url Coming Soon...
