--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -14,7 +14,7 @@
         %li 
           %a.menu-link{ href: "books.html"}   Books
         %li
-          %a.menu-link{ href: "#articles-id"} Articles
+          %a.menu-link{ href: "articles.html"} Articles
         %li
           %a.menu-link{ href: "/blog.html"}    Blog
       %ul.right-pull.wide-and-centered
