--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -6,17 +6,17 @@
       %h1.name-big.wide-and-centered Marc S. Kruza
       %div.right-pull.wide-and-centered
         %img{ src: "images/me.jpg" }
-        %a{ href: "#{}"} &#9658 About Marc 
+        / %a{ href: "#{}"} &#9658 About Marc 
     %div.menu-bar
       %ul.wide-and-centered
         %li
-          %a.menu-link{ href: "index.html"}   Home   
+          %a.menu-link{ href: "index.html"}  Home   
         %li 
-          %a.menu-link{ href: "books.html"}   Books
+          %a.menu-link{ href: "books.html"}  Books
         %li
-          %a.menu-link{ href: "articles.html"} Articles
+          %a.menu-link{ href: "travel.html"} Travel
         %li
-          %a.menu-link{ href: "/blog.html"}    Blog
+          %a.menu-link{ href: "/blog.html"}  Blog
       %ul.right-pull.wide-and-centered
         %li
           %a{ href: "https://twitter.com/mkruza" }
