--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -15,8 +15,8 @@
           %a.menu-link{ href: "books.html"}  Books
         %li
           %a.menu-link{ href: "travel.html"} Travel
-        / %li
-        /   %a.menu-link{ href: "/blog.html"}  Blog
+        %li
+          %a.menu-link{ href: "/blog.html"}  Blog
       %ul.right-pull.wide-and-centered
         %li
           %a{ href: "https://twitter.com/mkruza" }
