--- a/source/layouts/blog-index.html.slim
+++ b/source/layouts/blog-index.html.slim
@@ -3,4 +3,4 @@
     .blog-index
       h2 Blog Posts
       - blog.articles.each do |b|
-        a href=b.url Coming Soon...
+        a href=b.url = b.title
