added three houdinis

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -2,10 +2,10 @@
   %div.inner
     %div.name-bar.wide-and-centered
       %div.wide-and-centered
-        %img{ src: "images/msk_logo.jpg" }
+        %img{ src: "/images/msk_logo.jpg" }
       %h1.name-big.wide-and-centered Marc S. Kruza
       %div.right-pull.wide-and-centered
-        %img{ src: "images/me.jpg" }
+        %img{ src: "/images/me.jpg" }
         / %a{ href: "#{}"} &#9658 About Marc 
     %div.menu-bar
       %ul.wide-and-centered
@@ -20,17 +20,17 @@
       %ul.right-pull.wide-and-centered
         %li
           %a{ href: "https://twitter.com/mkruza" }
-            %img.social-media-widget{ src: "images/icon_twitter.jpg" }
+            %img.social-media-widget{ src: "/images/icon_twitter.jpg" }
         %li
           %a{ href: "https://www.facebook.com/marckruza/?skip_nax_wizard=true" }
-            %img.social-media-widget{ src: "images/icon_facebook.png" }
+            %img.social-media-widget{ src: "/images/icon_facebook.png" }
         %li
           %a{ href: "https://plus.google.com/b/107140843890666097689/107140843890666097689/about?gmbpt=true&pageId=107140843890666097689" }
-            %img.social-media-widget{ src: "images/icon_google_plus.jpg" }
+            %img.social-media-widget{ src: "/images/icon_google_plus.jpg" }
         %li
           %a{ href: "https://www.instagram.com/marckruza/?hl=en" }
-            %img.social-media-widget{ src: "images/icon_instagram.jpg" }
+            %img.social-media-widget{ src: "/images/icon_instagram.jpg" }
         %li
           %a{ href: "https://www.linkedin.com/in/marc-kruza-1765128" }
-            %img.social-media-widget{ src: "images/icon_linked_in.png" }
+            %img.social-media-widget{ src: "/images/icon_linked_in.png" }
 
