--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -24,6 +24,18 @@
     text-align: center;
   }
 
+  h1 {
+    color: $blue;
+    padding: 0.5em;
+    margin: 0 auto;
+  }
+
+  h2 {
+    color: $blue;
+    padding: 0.5em;
+    margin: 0 auto;
+  }
+
   p {
     line-height: 1.5em;
     padding: 0.5em;
@@ -53,7 +65,7 @@
     max-width: 40%;
     text-align: center;
     /*clip-path: polygon(5% 50%, 10% 5%, 90% 5%, 95% 50%, 90% 95%, 10% 95%);*/
-    font-family: Geneva, cursive;
+    font-family: Geneva;
     padding-left: 10%;
     padding-right: 10%;
     -webkit-transition:color .2s ease-out, background .2s ease-in;
@@ -62,16 +74,17 @@
 
     a {
       display: block;
-      color: $white;
+      color: $black;
+      text-decoration: none;
       width: 100%;
-      background-color: $blue;
+      line-height: 1.25em;
+      -webkit-transition:color .2s ease-out, background .2s ease-in;
+        &:hover { color: $blue; }
     }
-
 
     @media (min-width: 550px) {
       .right-pull {
         float: right;
-        /*margin-top: 0.5em;*/
       }
     }
     
