adjusted margins, fixed header links (home, travel, books, blog)

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -10,11 +10,11 @@
     %div.menu-bar
       %ul.wide-and-centered
         %li
-          %a.menu-link{ href: "index.html"}  Home   
+          %a.menu-link{ href: "/index.html"}  Home   
         %li 
-          %a.menu-link{ href: "books.html"}  Books
+          %a.menu-link{ href: "/books.html"}  Books
         %li
-          %a.menu-link{ href: "travel.html"} Travel
+          %a.menu-link{ href: "/travel.html"} Travel
         %li
           %a.menu-link{ href: "/blog.html"}  Blog
       %ul.right-pull.wide-and-centered
