--- a/source/stylesheets/landing.scss
+++ b/source/stylesheets/landing.scss
@@ -22,7 +22,9 @@ background-color: $black;
     padding: 0.5em;
     font-size: 20pt;
   }
-
+  .my-poly {
+    position: absolute;
+  }
 
   /*debugging*/
   .outline {
