fixed hexagon positions

--- a/source/custom_pages/landing.html.haml
+++ b/source/custom_pages/landing.html.haml
@@ -2,26 +2,26 @@
 %link{ href: "/stylesheets/landing.scss", rel: "stylesheets", type: "text/css"}
 
 %div.first-container.outline.red
-  %svg.my-poly{ height: "500", width: "400"}
-    %polygon{ points: "200 400   27 300   27 100   200 0   373 100   373 300", style: "stroke:purple;stroke-width:1" }
-    %animatetransform{ attributename: "transform", begin: "0s", dur: "0.5s", from: "0.9 0.9", repeatcount: "0", to: "1 1", type: "scale"}
-    %animatetransform{ :attributename => "transform", :begin => "0s", :dur => "0.5s", :from => "50 50", :to => "0 0", :type => "translate"}
-    %animate{attributename: "opacity", begin: "0s", dur: "0.5s", from: "0", to: "1"}
+  %svg.my-poly{ height: "800", width: "1000"}
+    %polygon{ points: "355 400   182 300   182 100   355 0   528 100   528 300", style: "stroke:purple;stroke-width:1" }
+    %animatetransform{  attributename: "transform", begin: "0s", dur: "0.5s", from: "0 -20",    to: "0 0", type: "translate"}
+    %animatetransform{  attributename: "transform", begin: "0s", dur: "0.5s", from: "0.0 0.7",  to: "1 1", type: "scale"}
+    %animate{           attributename: "opacity",   begin: "0s", dur: "0.5s", from: "0",        to: "1"}
   
-  %svg.my-poly{height: "500", width: "400"}
-    %polygon{points: "200 443   27 343   27 143   200 43   373 143   373 343", style: "stroke:purple;stroke-width:1"}
-    %animatetransform{attributename: "transform", begin: "0.5s", dur: "0.5s", from: "0.9 0.9", repeatcount: "0", to: "1 1", type: "scale"}
-    %animatetransform{ :attributename => "transform", :begin => "0.5s", :dur => "0.5s", :from => "20 20", :to => "0 0", :type => "translate"}
-    %animate{attributename: "opacity", begin: "0s", dur: "0.5", from: "0", to: "0"}
-    %animate{attributename: "opacity", begin: "0.5s", dur: "0.5s", from: "0", to: "1"}
+  %svg.my-poly{ height: "800", width: "1000", xmlns: "/books.html"}
+    %polygon{ points: "535 715   362 615   362 415   535 315   708 415   708 615", style: "stroke:green;stroke-width:1"}
+    %animatetransform{  attributename: "transform", begin: "0.5s", dur: "0.5s", from: "-20 -20", to: "0 0", type: "translate"}
+    %animatetransform{  attributename: "transform", begin: "0.5s", dur: "0.5s", from: "0.0 0.5", to: "1 1", type: "scale"}
+    %animate{           attributename: "opacity",   begin: "0s",   dur: "0.5",  from: "0",       to: "0"}
+    %animate{           attributename: "opacity",   begin: "0.5s", dur: "0.5s", from: "0",       to: "1"}
   
-  %svg.my-poly{height: "5 00", width: "400"}
-    %polygon{points: "225 443   52 343   52 143   225 43   398 143   398 343", style: "stroke:purple;stroke-width:1"}
-    %animatetransform{attributename: "transform", begin: "1s", dur: "0.5s", from: "0.9 0.9", repeatcount: "0", to: "1 1", type: "scale"}
-    %animatetransform{ :attributename => "transform", :begin => "1s", :dur => "0.5s", :from => "20 20", :to => "0 0", :type => "translate"}
-    %animate{attributename: "opacity", begin: "0s", dur: "1", from: "0", to: "0"}
-    %animate{attributename: "opacity", begin: "1s", dur: "0.5s", from: "0", to: "1"}
- 
+  %svg.my-poly{ height: "800", width: "1000"}
+    %polygon{ points: "175 715   2 615   2 415   175 315   348 415   348 615", style: "stroke:yellow;stroke-width:1"}
+    %animatetransform{  attributename: "transform", begin: "1s", dur: "0.5s", from: "20 20",   to: "0 0", type: "translate"}
+    %animatetransform{  attributename: "transform", begin: "1s", dur: "0.5s", from: "0.0 0.5", to: "1 1", type: "scale"}
+    %animate{           attributename: "opacity",   begin: "0s", dur: "1",    from: "0",       to: "0"}
+    %animate{           attributename: "opacity",   begin: "1s", dur: "0.5s", from: "0",       to: "1"}
+    
 
       
       
