repositioned hexes as absolute

--- a/source/custom_pages/landing.html.haml
+++ b/source/custom_pages/landing.html.haml
@@ -1,6 +1,6 @@
 
 %link{ href: "/stylesheets/landing.scss", rel: "stylesheets", type: "text/css"}
-%link{ href: "/stylesheets/bootstrap.css", rel: "stylesheets", type: "text/css"}
+%link{ href: "/stylesheets/bootstrap.scss", rel: "stylesheets", type: "text/css"}
 
 %div.container-fluid.box-top.red.outline
   %div#box-top.row
@@ -9,7 +9,7 @@
         Marc S. Kruza
       %ul.nav.nav-tabs.pull-right
         %li{ role: "presentation"}
-          %a.menu-link{ href: "#novels-id"} Books
+          %a.menu-link{ href: "#novels-id" } Books
         %li{ role: "presentation"}
           %a.menu-link{ href: "#articles-id"} Articles
         %li{ role: "presentation"}
@@ -18,31 +18,29 @@
     %ul#social-media-bar.green.outline 
       %li
         %a{ href: "https://twitter.com/mkruza" }
-          %img.social-media-widget.img-responsive{ src: "/images/icon_twitter.jpg" }
+          %img.social-media-widget{ src: "/images/icon_twitter.jpg" }
       %li
         %a{ href: "https://www.facebook.com/marckruza/?skip_nax_wizard=true" }
-          %img.social-media-widget.img-responsive{ src: "/images/icon_facebook.png" }
+          %img.social-media-widget{ src: "/images/icon_facebook.png" }
       %li
         %a{ href: "https://plus.google.com/b/107140843890666097689/107140843890666097689/about?gmbpt=true&pageId=107140843890666097689" }
-          %img.social-media-widget.img-responsive{ src: "/images/icon_google_plus.jpg" }
+          %img.social-media-widget{ src: "/images/icon_google_plus.jpg" }
       %li
         %a{ href: "https://www.instagram.com/marckruza/?hl=en" }
-          %img.social-media-widget.img-responsive{ src: "/images/icon_instagram.jpg" }
+          %img.social-media-widget{ src: "/images/icon_instagram.jpg" }
       %li
         %a{ href: "https://www.linkedin.com/in/marc-kruza-1765128" }
-          %img.social-media-widget.img-responsive{ src: "/images/icon_linked_in.png" }
+          %img.social-media-widget{ src: "/images/icon_linked_in.png" }
 
-    %div#headshot-and-highlights.row.blue.outline
-      %div.col-xs-12.col-sm-6.col-md-3.yellow.outline
-        %div.small-book
-          %img.img-responsive{ src: "/assets/images/me.jpg"}
+    %div#headshot-and-highlights.row
+      %div.col-xs-12.col-sm-6.col-md-3.big-hex-holder
+        %img.big-hex.one{ src: "/images/me.jpg"}
 
-      %div.col-xs-12.col-sm-6.col-md-6.yellow.outline.my-list
-        %section.my-list Having graduated from Florida State with degrees in Computer Science and Music Composition, my interests range from writing novels to writing computer programs, and from singing in church to playing in a local rock band. I love beaches, mountains, surfing and hiking... and writing about them. I'd love to find a way to put my talents to work for you!
+      %div.col-xs-12.col-sm-6.col-md-6.big-hex-holder
+        %section.big-hex.two Having graduated from Florida State with degrees in Computer Science and Music Composition, my interests range from writing novels to writing computer programs, and from singing in church to playing in a local rock band. I love beaches, mountains, surfing and hiking... and writing about them. I'd love to find a way to put my talents to work for you!
       
-      %div.col-xs-12.col-sm-6.col-md-3.green.outline
-        %div.small-book
-          %img.img-responsive{ src: "/assets/images/15b.jpg" }
+      %div.col-xs-12.col-sm-6.col-md-3.big-hex-holder
+        %img.big-hex.three{ src: "/images/15b.jpg" }
       
 %div.container-fluid.red.outline
 
