--- a/source/stylesheets/landing.scss
+++ b/source/stylesheets/landing.scss
@@ -36,7 +36,7 @@ body {
   position: absolute;
   top: 6em;
   left: 0;
-  width: 5.5em;
+  width: 2.5em;
   padding: 1em;
   height: auto;
   list-style-type: none;
@@ -78,10 +78,38 @@ body {
   padding: 1em;
 }
 
-
 .small-book {
   margin: 1em;
   max-width: 35em;
+}
+
+.big-hex-holder {
+  display: inline-block;
+  position: relative;
+  max-width: 50%;
+  max-height: 50%;
+}
+
+.big-hex {
+  position: relative;
+  display: inline-block;
+  width: 20em;
+  height: 20em;
+  background-color: gray;
+  clip-path: polygon(0% 50%, 25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%);
+}
+
+.one {
+  left: 0;
+  top: 0;
+}
+.two {
+  left: 1em;
+  top:  1em;
+}
+.three {
+  left: 2em;
+  top:  0;
 }
 
 .narrow-book {
@@ -204,56 +232,4 @@ body {
     &:hover { color: yellow; }
 }
 
-/*
-#novels-id {
-  background: transparent;
-  font-family: "Orbitron";
-  font-size: 18pt;
-  color: yellow;
-}
 
-#articles-id {
-  font-family: "Orbitron";
-  font-size: 18pt;
-  color: yellow;
-}
-
-#blog-id {
-  font-family: "Orbitron";
-  font-size: 18pt;
-  color: yellow;
-}
-
-
-#small-book-grid {
-  max-height: 100%;
-  margin: auto 0;
-  max-width: 75%;
-}
-
-*/
-
-/* troubleshooting */
-/*
-.outline {
-  outline-style: dotted; 
-  height: auto; 
-  padding: 1em;
-}
-
-.red {
-  outline-color: red;
-}
-
-.blue {
-  outline-color: blue;
-}
-
-.green {
-  outline-color: green;
-}
-
-.yellow {
-  outline-color: yellow;
-}
-*/
